--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,8 @@
-name: End-to-end tests
+name: Cypress tests
 on: [push]
 jobs:
   cypress-run:
+  name: Cypress run
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -10,3 +11,12 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v4
+        with:
+          record: true
+        env:
+        # pass the Dashboard record key as an environment variable
+        CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+        # pass GitHub token to allow accurately detecting a build vs a re-run build
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # pass the project ID from the secrets through environment variable
+        CYPRESS_PROJECT_ID: ${{ secrets.PROJECT_ID }}
